k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-and-kubernetes-python-web-app-deployment
  labels:
    app: docker-and-kubernetes-python-web-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: docker-and-kubernetes-python-web-app
  template:
    metadata:
      labels:
        app: docker-and-kubernetes-python-web-app 
    spec:
      containers:
      - name: docker-and-kubernetes-python-web-app
        image: docker-and-kubernetes-python-web-app:1.0.0
        ports:
        - containerPort: 8080
