k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-db
spec:
  ports:
  - port: 6379
  selector:
    app: redis
