k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-and-kubernetes-python-web-app-service
  labels:
    app: docker-and-kubernetes-python-web-app
spec:
  type: NodePort
  ports:
  - port: 3100
    targetPort: 8080
    nodePort: 30001
    protocol: TCP
  selector:
    app: docker-and-kubernetes-python-web-app
