k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-dotnet-ingressroute
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik 
  rules:
  - host: angular-dotnet-web-app.com.ua
    http:
      paths:
      # Route /api to your backend API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: weather-api-service
            port:
              number: 8080
      # Route everything else to your frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-frontend-service
            port:
              number: 80
